@@ -17,27 +17,24 @@ import org.mmbase.util.logging.Logging;
 import org.mmbase.util.xml.DocumentReader;
 import org.w3c.dom.Element;
 
-import java.util.concurrent.ConcurrentHashMap;
+import edu.emory.mathcs.backport.java.util.concurrent.ConcurrentHashMap;
 
-import java.lang.management.*;
-import javax.management.*;
 
 
 /**
  * Cache manager manages the static methods of {@link Cache}. If you prefer you can call them on this in stead.
  *
  * @since MMBase-1.8
- * @version $Id: CacheManager.java,v 1.41 2008-09-05 13:56:55 michiel Exp $
+ * @version $Id: CacheManager.java,v 1.6.2.2 2008-03-19 15:38:04 michiel Exp $
  */
-public abstract class CacheManager {
+public class CacheManager {
 
     private static final Logger log = Logging.getLoggerInstance(CacheManager.class);
 
     /**
      * All registered caches
      */
-    //private static final NavigableMap<String, Cache<?,?>> caches = new ConcurrentSkipListMap<String, Cache<?,?>>();
-    private static final Map<String, Cache<?,?>> caches = new ConcurrentHashMap<String, Cache<?,?>>();
+    private static final Map caches = new ConcurrentHashMap();
 
     /**
      * Returns the Cache with a certain name. To be used in combination with getCaches(). If you
@@ -47,29 +44,7 @@ public abstract class CacheManager {
      * @see #getCaches
      */
     public static Cache getCache(String name) {
-        return caches.get(name);
-    }
-
-    /**
-     * Returns a cache wrapped in a 'Bean', so it is not a Map any more. This makes it easier
-     * accesible by tools which want that (like EL).
-     * @since MMBase-1.9
-     */
-    public static Bean getBean(String name) {
-        return new Bean(getCache(name));
-    }
-    public static Set<Bean> getCaches(String className) {
-        SortedSet<Bean> result = new TreeSet<Bean>();
-        for (Cache c : caches.values()) {
-            try {
-                if (className == null || Class.forName(className).isInstance(c)) {
-                    result.add(new Bean(c));
-                }
-            } catch (Exception e) {
-                throw new RuntimeException(e);
-            }
-        }
-        return result;
+        return (Cache) caches.get(name);
     }
 
     /**
@@ -77,14 +52,13 @@ public abstract class CacheManager {
      *
      * @return A Set containing the names of all caches.
      */
-    public static Set<String> getCaches() {
+    public static Set getCaches() {
         return Collections.unmodifiableSet(caches.keySet());
     }
-
     /**
      * @since MMBase-1.8.6
      */
-    public static Map<String, Cache<?, ?>> getMap() {
+    public static Map getMap() {
         return Collections.unmodifiableMap(caches);
     }
 
@@ -96,60 +70,10 @@ public abstract class CacheManager {
      * @param cache A cache.
      * @return The previous cache of the same type (stored under the same name)
      */
-    public static <K,V> Cache<K,V> putCache(final Cache<K,V> cache) {
-        Cache old = caches.put(cache.getName(), cache);
-        try {
-            configure(configReader, cache.getName());
-        } catch (Throwable t) {
-            log.error(t.getMessage(), t);
-        }
-        Runnable run = new Runnable() {
-                public void run() {
-                    org.mmbase.bridge.ContextProvider.getDefaultCloudContext().assertUp();
-                    ObjectName name = getObjectName(cache);
-                    try {
-                        MBeanServer mbs = ManagementFactory.getPlatformMBeanServer();
-                        mbs.registerMBean(cache, name);
-                    } catch (JMException jmo) {
-                        log.warn("" + name + " " + jmo.getClass() + " " + jmo.getMessage());
-                    } catch (Throwable t) {
-                        log.error("" + name + " " + t.getClass() + " " + t.getMessage());
-                    }
-                }
-            };
-        if (org.mmbase.bridge.ContextProvider.getDefaultCloudContext().isUp()) {
-            run.run();
-        } else {
-            ThreadPools.jobsExecutor.execute(run);
-        }
-
+    protected static Cache putCache(Cache cache) {
+        Cache old = (Cache) caches.put(cache.getName(), cache);
+        configure(configReader, cache.getName());
         return old;
-    }
-
-
-    /**
-     * @since MMBase-1.9
-     */
-    private static ObjectName getObjectName(Cache cache) {
-        Hashtable<String, String> props = new Hashtable<String, String>();
-        try {
-            props.put("type", "CacheMBean");
-            org.mmbase.util.transformers.CharTransformer identifier = new org.mmbase.util.transformers.Identifier();
-            String machineName = org.mmbase.module.core.MMBaseContext.getMachineName();
-            if (machineName != null) {
-                props.put("mmb", machineName);
-            } else {
-            }
-            if (cache != null) {
-                props.put("name", identifier.transform(cache.getName()));
-            } else {
-                //props.put("name", "*"); // WTF, this does not work in java 5.
-            }
-            return new ObjectName("org.mmbase.cache", props);
-        } catch (MalformedObjectNameException mfone) {
-            log.warn("" + props + " " + mfone);
-            return null;
-        }
     }
 
     /**
@@ -179,13 +103,13 @@ public abstract class CacheManager {
             if (log.isDebugEnabled()) log.debug("Configuring cache " + only + " with file " + xmlReader.getSystemId());
         }
 
-        for (Element cacheElement: xmlReader.getChildElements("caches", "cache")) {
+        Iterator e =  xmlReader.getChildElements("caches", "cache");
+        while (e.hasNext()) {
+            Element cacheElement = (Element) e.next();
             String cacheName =  cacheElement.getAttribute("name");
             if (only != null && ! only.equals(cacheName)) {
                 continue;
             }
-            // TODO: fix again when everybody runs 1.5.0_08, because of
-            // generics bug http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=4916620
             Cache cache = getCache(cacheName);
             if (cache == null) {
                 log.service("No cache " + cacheName + " is present (perhaps not used yet?)");
@@ -193,8 +117,10 @@ public abstract class CacheManager {
                 String clazz = xmlReader.getElementValue(xmlReader.getElementByPath(cacheElement, "cache.implementation.class"));
                 if(!"".equals(clazz)) {
                     Element cacheImpl = xmlReader.getElementByPath(cacheElement, "cache.implementation");
-                    Map<String,String> configValues = new HashMap<String,String>();
-                    for (Element attrNode: xmlReader.getChildElements(cacheImpl, "param")) {
+                    Iterator it = xmlReader.getChildElements(cacheImpl, "param");
+                    Map configValues = new HashMap();
+                    while (it.hasNext()) {
+                        Element attrNode = (Element)it.next();
                         String paramName = xmlReader.getElementAttributeValue(attrNode, "name");
                         String paramValue = xmlReader.getElementValue(attrNode);
                         configValues.put(paramName, paramValue);
@@ -204,13 +130,11 @@ public abstract class CacheManager {
                 String status = xmlReader.getElementValue(xmlReader.getElementByPath(cacheElement, "cache.status"));
                 cache.setActive(status.equalsIgnoreCase("active"));
                 try {
-                    Integer size = Integer.valueOf(xmlReader.getElementValue(xmlReader.getElementByPath(cacheElement, "cache.size")));
+                    Integer size = new Integer(xmlReader.getElementValue(xmlReader.getElementByPath(cacheElement, "cache.size")));
                     cache.setMaxSize(size.intValue());
                     log.service("Setting " + cacheName + " " + status + " with size " + size);
                 } catch (NumberFormatException nfe) {
                     log.error("Could not configure cache " + cacheName + " because the size was wrong: " + nfe.toString());
-                } catch (Throwable t) {
-                    log.error(" " + cacheName + " maxsize " + t.getMessage());
                 }
                 String maxSize = xmlReader.getElementValue(xmlReader.getElementByPath(cacheElement, "cache.maxEntrySize"));
                 if (!"".equals(maxSize)) {
@@ -219,8 +143,6 @@ public abstract class CacheManager {
                         log.service("Setting maximum entry size on " + cacheName + ": " + cache.maxEntrySize + " bytes ");
                     } catch (NumberFormatException nfe2) {
                         log.error("Could not set max entry size cache  of " + cacheName + " because " + nfe2.toString());
-                    } catch (Throwable t) {
-                        log.error(" " + cacheName + " maxentrysize " + t.getMessage());
                     }
                 } else {
                     if (cache.getDefaultMaxEntrySize() > 0) {
@@ -252,7 +174,6 @@ public abstract class CacheManager {
     }
 
 
-
     /**
      * The caches can be configured with an XML file, this file can
      * be changed which causes the caches to be reconfigured automaticly.
@@ -260,11 +181,9 @@ public abstract class CacheManager {
     private static ResourceWatcher configWatcher = new ResourceWatcher () {
             public void onChange(String resource) {
                 try {
-                    org.xml.sax.InputSource is =  ResourceLoader.getConfigurationRoot().getInputSource(resource);
-                    log.service("Reading " + is.getSystemId());
-                    configReader = new DocumentReader(is, Cache.class);
+                    configReader = new DocumentReader(ResourceLoader.getConfigurationRoot().getInputSource(resource), Cache.class);
                 } catch (Exception e) {
-                    log.warn(e.getClass() + " " + e.getMessage());
+                    log.error(e);
                     return;
                 }
                 configure(configReader);
@@ -282,9 +201,11 @@ public abstract class CacheManager {
 
 
     public static int getTotalByteSize() {
+        Iterator i = caches.entrySet().iterator();
         int len = 0;
         SizeOf sizeof = new SizeOf();
-        for (Map.Entry entry : caches.entrySet()) {
+        while (i.hasNext()) {
+            Map.Entry entry = (Map.Entry) i.next();
             len += sizeof.sizeof(entry.getKey()) + sizeof.sizeof(entry.getValue());
         }
         return len;
@@ -295,95 +216,13 @@ public abstract class CacheManager {
      * @since MMBase-1.8.1
      */
     public static void shutdown() {
-        MBeanServer mbs = ManagementFactory.getPlatformMBeanServer();
-        log.info("Clearing and unregistering all caches");
-        log.debug(mbs.queryNames(getObjectName(null), null));
-        for(Cache<?,?> cache : caches.values()) {
+        log.info("Clearing all caches");
+        Iterator  i =  caches.values().iterator();
+        while (i.hasNext()) {
+            Cache cache = (Cache) i.next();
             cache.clear();
-            ObjectName name = getObjectName(cache);
-            if (mbs.isRegistered(name)) {
-                try {
-                    mbs.unregisterMBean(name);
-                } catch (JMException jmo) {
-                    log.warn("" + name + " " + jmo.getClass() + " " + jmo.getMessage() + " " + mbs.queryNames(null, null));
-                }
-            }
-        }
-        if(mbs.queryNames(getObjectName(null), null).size() > 0) {
-            log.warn("Didn't unregister all caches" + mbs.queryNames(getObjectName(null), null));
-        }
-        caches.clear();
-    }
-
-
-    /**
-     * Used in config/functions/caches.xml
-     */
-    public static Object remove(String name, Object key) {
-        Cache cache = getCache(name);
-        if (cache == null) throw new IllegalArgumentException();
-        return cache.remove(key);
-    }
-
-    public static class Bean<K, V> implements Comparable<Bean<?, ?>> {
-        /* private final Cache<K, V> cache; // this line prevents building in Java 1.5.0_07 probably because of http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=4916620 */
-        private final Cache cache;
-        public Bean(Cache<K, V> c) {
-            cache = c;
-        }
-        public String getName() { return cache.getName(); }
-        public String getDescription() { return cache.getDescription(); }
-        public int getMaxEntrySize() { return cache.getMaxEntrySize(); }
-        public Set<Map.Entry<K, V>> getEntrySet() { return new HashSet<Map.Entry<K, V>>(cache.entrySet()); }
-        public Set<K> getKeySet() { return new HashSet<K>(cache.keySet()); }
-        public long getHits() { return cache.getHits(); }
-        public long  getMisses() { return cache.getMisses(); }
-        public long getPuts() { return cache.getPuts(); }
-        public  int getMaxSize() { return cache.maxSize(); }
-        public  int getSize() { return cache.size(); }
-        public double getRatio() { return cache.getRatio(); }
-        public String getStats() { return cache.getStats(); }
-        public String toString() { return cache.toString(); }
-        public boolean isActive() { return cache.isActive(); }
-        public int getByteSize() { return cache.getByteSize(); }
-        public int getCheapByteSize() { return cache.getCheapByteSize(); }
-        public boolean isEmpty() { return cache.isEmpty(); }
-        public ReleaseStrategy getReleaseStrategy() { return cache instanceof QueryResultCache ? ((QueryResultCache) cache).getReleaseStrategy() : null;}
-        public Map<K, V> getMap() {  return cache; }
-        public Map<K, Integer> getCounts() {
-            return new AbstractMap<K, Integer>() {
-                public Set<Map.Entry<K, Integer>> entrySet() {
-                    return new AbstractSet<Map.Entry<K, Integer>>() {
-                        public int size() {
-                            return cache.size();
-                        }
-                        public Iterator<Map.Entry<K, Integer>> iterator() {
-                            return new Iterator<Map.Entry<K, Integer>>() {
-                                private Iterator<K> iterator = new HashSet<K>(cache.keySet()).iterator();
-                                public boolean hasNext() {
-                                    return iterator.hasNext();
-                                }
-                                public Map.Entry<K, Integer> next() {
-                                    K key = iterator.next();
-                                    return new org.mmbase.util.Entry<K, Integer>(key, cache.getCount(key));
-                                }
-                                public void remove() {
-                                    throw new UnsupportedOperationException();
-                                }
-                            };
-                        }
-                    };
-                }
-            };
-        }
-        public boolean equals(Object o) {
-            return  o instanceof Bean && ((Bean) o).cache.equals(cache);
-        }
-        public int hashCode() {
-            return cache.hashCode();
-        }
-        public int compareTo(Bean<?, ?> bean) {
-            return getName().compareTo(bean.getName());
+            i.remove();
         }
     }
+
 }
