@@ -11,23 +11,23 @@ package org.mmbase.datatypes;
 import org.mmbase.util.Casting;
 
 /**
- * DataType associated with {@link java.lang.Long}, as NumberDataType, but provides getMin and getMax as long.
+ *  * DataType associated with {@link java.lang.Long},  NumberDataType, but provides getMin and getMax as long.
  *
  * @author Pierre van Rooden
  * @author Michiel Meeuwissen
- * @version $Id: LongDataType.java,v 1.11 2008-09-01 17:39:44 michiel Exp $
+ * @version $Id: LongDataType.java,v 1.9 2006-04-29 19:41:09 michiel Exp $
  * @since MMBase-1.8
  */
-public class LongDataType extends NumberDataType<Long> {
-    private static final long serialVersionUID = 1L; 
+public class LongDataType extends NumberDataType {
+    private static final long serialVersionUID = 1L; // increase this if object serialization changes (which we shouldn't do!)
     /**
      * @param primitive indicate if a primitive type should be used
      */
     public LongDataType(String name, boolean primitive) {
         super(name, primitive ? Long.TYPE : Long.class);
-        setMin(Long.valueOf(Long.MIN_VALUE), true);
+        setMin(new Long(Long.MIN_VALUE), true);
         minRestriction.setEnforceStrength(ENFORCE_ABSOLUTE);
-        setMax(Long.valueOf(Long.MAX_VALUE), true);
+        setMax(new Long(Long.MAX_VALUE), true);
         maxRestriction.setEnforceStrength(ENFORCE_ABSOLUTE);
     }
 
@@ -36,7 +36,7 @@ public class LongDataType extends NumberDataType<Long> {
      * @return the minimum value as an <code>long</code>, or {@link Long#MIN_VALUE} if there is no minimum.
      */
     public long getMin() {
-        Long min = getMinRestriction().getValue();
+        Object min = getMinRestriction().getValue(); 
         return min == null ? Long.MIN_VALUE : Casting.toLong(min); // casting, mainly to anticipate dates
     }
 
@@ -44,7 +44,7 @@ public class LongDataType extends NumberDataType<Long> {
      * @return the maximum value as an <code>long</code>, or {@link Long#MAX_VALUE} if there is no maximum.
      */
     public long getMax() {
-        Long max = getMaxRestriction().getValue();
+        Object max = getMaxRestriction().getValue(); 
         return max == null ? Long.MAX_VALUE : Casting.toLong(max); // casting, mainly to anticipate dates
     }
 
