@@ -12,12 +12,11 @@ import java.sql.*;
 import java.util.*;
 import javax.sql.DataSource;
 
-import org.mmbase.cache.*;
-import org.mmbase.bridge.Field;
+import org.mmbase.cache.NodeCache;
+import org.mmbase.cache.Cache;
 import org.mmbase.bridge.NodeManager;
 import org.mmbase.core.CoreField;
 import org.mmbase.module.core.*;
-import org.mmbase.module.database.MultiConnection;
 import org.mmbase.storage.implementation.database.DatabaseStorageManager;
 import org.mmbase.storage.implementation.database.DatabaseStorageManagerFactory;
 import org.mmbase.storage.search.*;
@@ -34,7 +33,7 @@ import org.mmbase.storage.search.implementation.ModifiableQuery;
  * by the handler, and in this form executed on the database.
  *
  * @author Rob van Maris
- * @version $Id: BasicQueryHandler.java,v 1.63 2008-07-17 12:55:23 michiel Exp $
+ * @version $Id: BasicQueryHandler.java,v 1.52.2.1 2007-10-22 08:42:47 nklasens Exp $
  * @since MMBase-1.7
  */
 public class BasicQueryHandler implements SearchQueryHandler {
@@ -64,11 +63,11 @@ public class BasicQueryHandler implements SearchQueryHandler {
 
 
     // javadoc is inherited
-    public List<MMObjectNode> getNodes(SearchQuery query, MMObjectBuilder builder) throws SearchQueryException {
+    public List getNodes(SearchQuery query, MMObjectBuilder builder) throws SearchQueryException {
 
-        List<MMObjectNode> results;
+        List results;
         Connection con = null;
-        PreparedStatement stmt = null;
+        Statement stmt = null;
         String sqlString = null;
 
         try {
@@ -90,18 +89,16 @@ public class BasicQueryHandler implements SearchQueryHandler {
 
             sqlString = createSqlString(query, mustSkipResults, sqlHandlerSupportsMaxNumber);
 
-            if (log.isDebugEnabled()) {
-                log.debug("sql: " + sqlString);
-            }
-
+            log.debug("sql: " + sqlString);
+            
             // Execute the SQL... ARGH !!! Has to move!
             // get connection...
             DataSource dataSource = ((DatabaseStorageManagerFactory) mmbase.getStorageManagerFactory()).getDataSource();
             con = dataSource.getConnection();
-            ResultSet rs = null;
+            stmt = con.createStatement();
+            ResultSet rs = stmt.executeQuery(sqlString);
+
             try {
-                stmt = con.prepareStatement(sqlString);
-                rs = stmt.executeQuery();
                 if (mustSkipResults) {
                     log.debug("skipping results, to provide weak support for offset");
                     for (int i = 0; i < query.getOffset(); i++) {
@@ -110,7 +107,7 @@ public class BasicQueryHandler implements SearchQueryHandler {
                 }
 
                 // Now store results as cluster-/real nodes.
-                StepField[] fields = query.getFields().toArray(STEP_FIELD_ARRAY);
+                StepField[] fields = (StepField[]) query.getFields().toArray(STEP_FIELD_ARRAY);
                 int maxNumber = query.getMaxNumber();
 
                 // now, we dispatch the reading of the result set to the right function wich instantiates Nodes of the right type.
@@ -122,25 +119,13 @@ public class BasicQueryHandler implements SearchQueryHandler {
                     results = readNodes(builder, fields, rs, sqlHandlerSupportsMaxNumber, maxNumber);
                 }
             } finally {
-                if (rs != null) {
-                    rs.close();
-                }
+                rs.close();
             }
         } catch (SQLException e) {
             // Something went wrong, log exception
             // and rethrow as SearchQueryException.
             if (log.isDebugEnabled()) {
                 log.debug("Query failed:" + query + "\n" + e + Logging.stackTrace(e));
-            }
-            if (con instanceof MultiConnection) {
-                log.debug("Calling check after exception");
-                try {
-                    ((MultiConnection) con).checkAfterException();
-                } catch (SQLException sqe) {
-                    log.debug(sqe);
-                }
-            } else {
-                log.debug("Not a multiconnection");
             }
             throw new SearchQueryException("Query '" + (sqlString == null ? "" + query.toString() : sqlString)  + "' failed: " + e.getClass().getName() + ": " + e.getMessage(), e);
         } finally {
@@ -195,6 +180,7 @@ public class BasicQueryHandler implements SearchQueryHandler {
         return createSqlString(query, mustSkipResults, sqlHandlerSupportsMaxNumber);
     }
 
+    
     /**
      * Makes a String of a query, taking into consideration if the database supports offset and
      * maxnumber features. The resulting String is an SQL query which can be fed to the database.
@@ -244,11 +230,11 @@ public class BasicQueryHandler implements SearchQueryHandler {
     /**
      * Read the result list and creates a List of ClusterNodes.
      */
-    private List<MMObjectNode> readNodes(ClusterBuilder builder, StepField[] fields, ResultSet rs,
-            boolean sqlHandlerSupportsMaxNumber, int maxNumber, int numberOfSteps) {
-        List<MMObjectNode> results = new ArrayList<MMObjectNode>();
+    private List readNodes(ClusterBuilder builder, StepField[] fields, ResultSet rs, boolean sqlHandlerSupportsMaxNumber, int maxNumber, int numberOfSteps) throws SQLException {
+        List results = new ArrayList();
         DatabaseStorageManager storageManager = (DatabaseStorageManager)mmbase.getStorageManager();
 
+        boolean storesAsFile = builder.getMMBase().getStorageManagerFactory().hasOption(org.mmbase.storage.implementation.database.Attributes.STORES_BINARY_AS_FILE);
         // Truncate results to provide weak support for maxnumber.
         try {
             while (rs.next() && (results.size()<maxNumber || maxNumber==-1)) {
@@ -259,21 +245,17 @@ public class BasicQueryHandler implements SearchQueryHandler {
                     int j = 1;
                     // make use of Node-cache to fill fields
                     // especially XML-fields can be heavy, otherwise (Documnents must be instantiated)
-                    for (StepField element : fields) {
-                        String fieldName = element.getFieldName(); // why not getAlias first?
-                        Step step = element.getStep();
+                    for (int i = 0; i < fields.length; i++) {
+                        String fieldName = fields[i].getFieldName(); // why not getAlias first?
+                        Step step = fields[i].getStep();
                         String alias = step.getAlias();
                         if (alias == null) {
                             // Use tablename as alias when no alias is specified.
                             alias = step.getTableName();
                         }
                         CoreField field = builder.getField(alias +  '.' + fieldName);
-                        if (field.getType() == Field.TYPE_BINARY) {
-                            log.debug("Binary field  " + field.getName() + ", skipping storeValue");
-                            continue;
-                        }
+                        if (field.getType() == CoreField.TYPE_BINARY) continue;
                         Object value = storageManager.getValue(rs, j++, field, false);
-                        log.debug("Got " + value);
                         node.storeValue(alias +  '.' + fieldName, value);
                     }
                     node.clearChanged();
@@ -294,11 +276,11 @@ public class BasicQueryHandler implements SearchQueryHandler {
     /**
      * Read the result list and creates a List of ResultNodes
      */
-    private List<MMObjectNode> readNodes(ResultBuilder builder, StepField[] fields, ResultSet rs,
-            boolean sqlHandlerSupportsMaxNumber, int maxNumber) {
-        List<MMObjectNode> results = new ArrayList<MMObjectNode>();
+    private List readNodes(ResultBuilder builder, StepField[] fields, ResultSet rs, boolean sqlHandlerSupportsMaxNumber, int maxNumber) throws SQLException {
+        List results = new ArrayList();
         DatabaseStorageManager storageManager = (DatabaseStorageManager)mmbase.getStorageManager();
 
+        boolean storesAsFile = builder.getMMBase().getStorageManagerFactory().hasOption(org.mmbase.storage.implementation.database.Attributes.STORES_BINARY_AS_FILE);
         // Truncate results to provide weak support for maxnumber.
         try {
             while (rs.next() && (maxNumber>results.size() || maxNumber==-1)) {
@@ -306,13 +288,13 @@ public class BasicQueryHandler implements SearchQueryHandler {
                     ResultNode node = new ResultNode(builder);
                     node.start();
                     int j = 1;
-                    for (StepField element : fields) {
-                        String fieldName = element.getAlias();
+                    for (int i = 0; i < fields.length; i++) {
+                        String fieldName = fields[i].getAlias();
                         if (fieldName == null) {
-                            fieldName = element.getFieldName();
+                            fieldName = fields[i].getFieldName();
                         }
                         CoreField field = builder.getField(fieldName);
-                        if (field != null && field.getType() == Field.TYPE_BINARY) continue;
+                        if (field != null && field.getType() == CoreField.TYPE_BINARY) continue;
                         Object value = storageManager.getValue(rs, j++, field, false);
                         node.storeValue(fieldName, value);
                     }
@@ -334,21 +316,20 @@ public class BasicQueryHandler implements SearchQueryHandler {
     /**
      * Read the result list and creates a List of normal MMObjectNodes.
      */
-    private List<MMObjectNode> readNodes(MMObjectBuilder builder, StepField[] fields, ResultSet rs,
-            boolean sqlHandlerSupportsMaxNumber, int maxNumber) {
-        List<MMObjectNode> results= new ArrayList<MMObjectNode>();
+    private List readNodes(MMObjectBuilder builder, StepField[] fields, ResultSet rs, boolean sqlHandlerSupportsMaxNumber, int maxNumber) throws SQLException {
+        List results= new ArrayList();
         DatabaseStorageManager storageManager = (DatabaseStorageManager)mmbase.getStorageManager();
 
         boolean storesAsFile = builder.getMMBase().getStorageManagerFactory().hasOption(org.mmbase.storage.implementation.database.Attributes.STORES_BINARY_AS_FILE);
         // determine indices of queried fields
-        Map<CoreField, Integer> fieldIndices = new HashMap<CoreField, Integer>();
+        Map fieldIndices = new HashMap();
         Step nodeStep = fields[0].getStep();
         int j = 1;
-        for (StepField element : fields) {
-            if (element.getType() == Field.TYPE_BINARY) continue;
-            Integer index = Integer.valueOf(j++);
-            if (element.getStep() == nodeStep) {
-                String fieldName =  element.getFieldName();
+        for (int i = 0; i < fields.length; i++) {
+            if (fields[i].getType() == CoreField.TYPE_BINARY) continue;
+            Integer index = new Integer(j++);
+            if (fields[i].getStep() == nodeStep) {
+                String fieldName =  fields[i].getFieldName();
                 CoreField field = builder.getField(fieldName);
                 if (field == null) {
                     log.warn("Did not find the field '" + fieldName + "' in builder " + builder);
@@ -359,13 +340,15 @@ public class BasicQueryHandler implements SearchQueryHandler {
         }
 
         // Test if ALL fields are queried
-        StringBuilder missingFields = null;
-        for (CoreField field : builder.getFields(NodeManager.ORDER_CREATE)) {
+        List builderFields = builder.getFields(NodeManager.ORDER_CREATE);
+        StringBuffer missingFields = null;
+        for (Iterator f = builderFields.iterator(); f.hasNext();) {
+            CoreField field = (CoreField)f.next();
             if (field.inStorage()) {
-                if (field.getType() == Field.TYPE_BINARY) continue;
+                if (field.getType() == CoreField.TYPE_BINARY) continue;
                 if (fieldIndices.get(field) == null) {
                     if (missingFields == null) {
-                        missingFields = new StringBuilder(field.getName());
+                        missingFields = new StringBuffer(field.getName());
                     } else {
                         missingFields.append(", ").append(field.getName());
                     }
@@ -382,19 +365,19 @@ public class BasicQueryHandler implements SearchQueryHandler {
         // Truncate results to provide weak support for maxnumber.
         try {
             NodeCache nodeCache = NodeCache.getCache();
-            Cache<Integer, Integer> typeCache = CacheManager.getCache("TypeCache");
+            Cache typeCache = Cache.getCache("TypeCache");
             int builderType = builder.getObjectType();
-            Integer oTypeInteger = Integer.valueOf(builderType);
+            Integer oTypeInteger = new Integer(builderType);
             while (rs.next() && (maxNumber > results.size() || maxNumber==-1)) {
                 try {
                     /*
                      * This while statement does not deal with mmbase inheritance
-                     * It creates nodes based on the builder passed in. Nodes with
+                     * It creates nodes based on the builder passed in. Nodes with 
                      * subtypes of this builder are only filled with the field values
                      * of this builder. Builders of a subtype are not stored in the nodeCache
-                     * to limit the time scope of these nodes, because they are not complete.
+                     * to limit the time scope of these nodes, because they are not complete. 
                      */
-
+                    
                     MMObjectNode node;
                     if (!isVirtual) {
                         node = new MMObjectNode(builder, false);
@@ -402,20 +385,21 @@ public class BasicQueryHandler implements SearchQueryHandler {
                         node = new VirtualNode(builder);
                     }
                     node.start();
-                    for (CoreField field :  builder.getFields(NodeManager.ORDER_CREATE)) {
+                    for (Iterator i = builder.getFields(NodeManager.ORDER_CREATE).iterator(); i.hasNext(); ) {
+                        CoreField field = (CoreField)i.next();
                         if (! field.inStorage()) continue;
-                        Integer index = fieldIndices.get(field);
+                        Integer index = (Integer) fieldIndices.get(field);
                         Object value = null;
                         String fieldName = field.getName();
                         if (index != null) {
                             value = storageManager.getValue(rs, index.intValue(), field, true);
                         } else {
                             java.sql.Blob b = null;
-                            if (field.getType() == Field.TYPE_BINARY && storesAsFile) {
+                            if (field.getType() == CoreField.TYPE_BINARY && storesAsFile) {
                                 log.debug("Storage did not return data for '" + fieldName + "', supposing it on disk");
                                 // must have been a explicitely specified 'blob' field
                                 b = storageManager.getBlobValue(node, field, true);
-                            } else if (field.getType() == Field.TYPE_BINARY) {
+                            } else if (field.getType() == CoreField.TYPE_BINARY) {
                                 // binary fields never come directly from the database
                                 value = MMObjectNode.VALUE_SHORTED;
                             } else if (! isVirtual){
@@ -440,9 +424,9 @@ public class BasicQueryHandler implements SearchQueryHandler {
                     // (provided the node is persistent)
                     if (! isVirtual) {
                         int otype = node.getOType();
-                        Integer number = Integer.valueOf(node.getNumber());
+                        Integer number = new Integer(node.getNumber());
                         if (otype == builderType) {
-                            MMObjectNode cacheNode = nodeCache.get(number);
+                            MMObjectNode cacheNode = (MMObjectNode) nodeCache.get(number);
                             if (cacheNode != null) {
                                 node = cacheNode;
                             } else {
@@ -450,7 +434,7 @@ public class BasicQueryHandler implements SearchQueryHandler {
                             }
                             typeCache.put(number, oTypeInteger);
                         } else {
-                            typeCache.put(number, Integer.valueOf(otype));
+                            typeCache.put(number, new Integer(otype));
                         }
                     }
 
