@@ -31,11 +31,11 @@ import org.mmbase.util.logging.*;
  * This is done in the MyNews examples (on the news builder), and example JSP's can be found on /mmexamples/taglib/functions.jsp.
  *
  * @author Michiel Meeuwissen
- * @version $Id: ExampleBuilder.java,v 1.18 2007-07-02 14:28:29 michiel Exp $
+ * @version $Id: ExampleBuilder.java,v 1.13 2006-01-13 15:37:24 pierre Exp $
  * @see   ExampleBean For examples on hot to add functions to a builder without extending it.
  * @since MMBase-1.7
  */
-public class ExampleBuilder extends MMObjectBuilder { 
+public final class ExampleBuilder extends MMObjectBuilder { // final to avoid that people actually use this to extend their stuff from or so.
     private static final Logger log = Logging.getLoggerInstance(ExampleBuilder.class);
 
 
@@ -44,8 +44,8 @@ public class ExampleBuilder extends MMObjectBuilder {
      * otherwise it is pickup up by the automatich function detection.
      */
     protected final static Parameter[] LISTLATEST_PARAMETERS = {
-        new Parameter<Integer>("max", Integer.class, 10), /* name, type, default value */
-        new Parameter<Cloud>(Parameter.CLOUD, true)                  /* true: required! */
+        new Parameter("max", Integer.class, new Integer(10)), /* name, type, default value */
+        new Parameter(Parameter.CLOUD, true)                  /* true: required! */
     };
 
     protected final static Parameter[] SUMFIELDS_PARAMETERS = {
@@ -55,13 +55,13 @@ public class ExampleBuilder extends MMObjectBuilder {
     /**
      * Implementation of 'builder function', which can be compared with a static method in java.
      */
-    protected final Function<NodeList> listLatestFunction = new AbstractFunction<NodeList>("latest", LISTLATEST_PARAMETERS) {
+    protected final Function listLatestFunction = new AbstractFunction("latest", LISTLATEST_PARAMETERS, ReturnType.NODELIST) {
             {
                 setDescription("This (rather silly) function returns the latest instances of this builder.");
             }
-            public NodeList getFunctionValue(Parameters parameters) {
+            public Object getFunctionValue(Parameters parameters) {
                 Integer max = (Integer) parameters.get("max");
-                Cloud cloud = parameters.get(Parameter.CLOUD);
+                Cloud cloud = (Cloud) parameters.get(Parameter.CLOUD);
                 NodeManager thisManager = cloud.getNodeManager(getTableName());
                 NodeQuery q = thisManager.createQuery();
                 q.setMaxNumber(max.intValue());
@@ -77,18 +77,18 @@ public class ExampleBuilder extends MMObjectBuilder {
     /**
      * Implementation of 'node function', which can be compared with a instance method in java.
      */
-    protected final Function<Integer> sumFieldsFunction = new NodeFunction<Integer>("sumfields", SUMFIELDS_PARAMETERS) {
+    protected final Function sumFieldsFunction = new NodeFunction("sumfields", SUMFIELDS_PARAMETERS, ReturnType.INTEGER) {
             {
                 setDescription("This (rather silly) function returns the sum of the given fields of a certain node");
             }
-            public Integer getFunctionValue(Node node, Parameters parameters) {
+            public Object getFunctionValue(Node node, Parameters parameters) {
                 List fields = (List) parameters.get("fields");
                 int result = 0;
                 Iterator i = fields.iterator();
                 while (i.hasNext()) {
                     result += node.getIntValue((String)i.next());
                 }
-                return result;
+                return new Integer(result);
             }
     };
     {
@@ -100,17 +100,19 @@ public class ExampleBuilder extends MMObjectBuilder {
     {
 
         // you can of course even implement it anonymously.
-        addFunction(new AbstractFunction<List<String>>("showparameter",
-                                         new Parameter<Collection>("collectionparam", Collection.class),
-                                         new Parameter<Map>("mapparam", Map.class),
-                                         new Parameter<Integer>("integerparam", Integer.class),
-                                         new Parameter<Number>("numberparam", Number.class)
-                                         ) {
+        addFunction(new AbstractFunction("showparameter",
+                                         new Parameter[]  {
+                                             new Parameter("collectionparam", Collection.class),
+                                             new Parameter("mapparam", Map.class),
+                                             new Parameter("integerparam", Integer.class),
+                                             new Parameter("numberparam", Number.class)
+                                         },
+                                         ReturnType.LIST) {
                 {
                     setDescription("With this function one can demonstrate how to create parameters of several types, and in what excactly that results");
                 }
-                public List<String> getFunctionValue(Parameters parameters) {
-                    List<String>  result = new ArrayList<String>();
+                public Object getFunctionValue(Parameters parameters) {
+                    List result = new ArrayList();
                     Parameter[] def = parameters.getDefinition();
                     for (int i = 0 ; i < def.length; i++) {
                         Object value = parameters.get(i);
@@ -127,24 +129,27 @@ public class ExampleBuilder extends MMObjectBuilder {
         // an example of a function which is both node-function and builder-function
         // it also demonstrate that you may use bridge to implement a node-function.
 
-        addFunction(new NodeFunction<Node>("predecessor", Parameter.CLOUD // makes it possible to implement by bridge.
-                                           ) {
-                        {
+        addFunction(new NodeFunction("predecessor",
+                                     new Parameter[] {
+                                         Parameter.CLOUD // makes it possible to implement by bridge.
+                                     },
+                                     ReturnType.NODE) {
+                {
                     setDescription("Returns the node older then the current node, or null if this node is the oldest (if called on node), or the newest node of this type, or null of there are no nodes of this type (if called on builder)");
                 }
-                protected Node getFunctionValue(Node node, Parameters parameters) {
+                public Object getFunctionValue(Node node, Parameters parameters) {
                     NodeManager nm = node.getNodeManager();
                     NodeQuery q = nm.createQuery();
                     StepField field = q.getStepField(nm.getField("number"));
-                    q.setConstraint(q.createConstraint(field, FieldCompareConstraint.LESS, Integer.valueOf(node.getNumber())));
+                    q.setConstraint(q.createConstraint(field, FieldCompareConstraint.LESS, new Integer(node.getNumber())));
                     q.addSortOrder(field, SortOrder.ORDER_DESCENDING);
                     q.setMaxNumber(1);
                     NodeIterator i = nm.getList(q).nodeIterator();
                     return i.hasNext() ? i.nextNode() : null;
                 }
 
-                public Node getFunctionValue(Parameters parameters) {
-                    Cloud cloud = parameters.get(Parameter.CLOUD);
+                public Object getFunctionValue(Parameters parameters) {
+                    Cloud cloud = (Cloud) parameters.get(Parameter.CLOUD);
                     NodeManager nm = cloud.getNodeManager(ExampleBuilder.this.getTableName());
                     NodeQuery q = nm.createQuery();
                     StepField field = q.getStepField(nm.getField("number"));
